Improved search box
Changing Windows accent color while application is still running changes main color
Corrected startup crash on some versions of Windows