@@ -453,11 +453,11 @@
                         <StackPanel x:Name="EditDesign" Visibility="{Binding IsEditMode, Converter={StaticResource BooleanToVisibilityConverter}}" Orientation="Horizontal">
                             <StackPanel Width="250" HorizontalAlignment="Left">
                                 <TextBlock x:Uid="EntryBackgroundColor" />
-                                <userControls:ColorPickerUserControl SelectedColor="{Binding BackgroundColor, Converter={StaticResource ColorToBrushConverter}, Mode=TwoWay}" />
+                                <userControls:ColorPickerUserControl SelectedColor="{Binding BackgroundColor, Converter={StaticResource ColorToBrushConverter}, Mode=TwoWay}" IsEnabled="{Binding IsSelected}" />
                             </StackPanel>
                             <StackPanel Width="250" HorizontalAlignment="Left">
                                 <TextBlock x:Uid="EntryForegroundColor" />
-                                <userControls:ColorPickerUserControl SelectedColor="{Binding ForegroundColor, Converter={StaticResource ColorToBrushConverter}, Mode=TwoWay}" />
+                                <userControls:ColorPickerUserControl SelectedColor="{Binding ForegroundColor, Converter={StaticResource ColorToBrushConverter}, Mode=TwoWay}" IsEnabled="{Binding IsSelected}" />
                             </StackPanel>
                         </StackPanel>
                     </StackPanel>
@@ -481,7 +481,7 @@
                     Style="{StaticResource NoBorderButtonStyle}">
                 <SymbolIcon Symbol="Back" />
             </Button>
-            <Grid Grid.Column="1" >
+            <Grid Grid.Column="1" x:Name="TopGrid">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="60" />
                     <ColumnDefinition Width="*" />
@@ -497,13 +497,11 @@
                     <SymbolIcon Symbol="{Binding IconId, Converter={StaticResource IntToSymbolConverter}}" Width="80" Height="40"  />
                 </Viewbox>
                 <TextBox Grid.Column="1" Grid.Row="0"
-                    x:Name="TitleTextBox"
                     Text="{Binding Name, Mode=TwoWay}" 
                     Foreground="{ThemeResource DefaultTextForegroundThemeBrush}"
                     Background="Transparent"
                     SelectionHighlightColor="{StaticResource MainColor}"
                     IsHitTestVisible="{Binding IsEditMode}"
-                    IsEnabled="{Binding IsSelected}"
                     BorderThickness="0" 
                     FontSize="20"
                     FontWeight="Light"
