@@ -3,6 +3,15 @@
   <package id="HockeySDK.Core" version="4.1.6" targetFramework="win81" />
   <package id="HockeySDK.WINRT" version="4.1.6" targetFramework="win81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.1" targetFramework="win81" />
+  <package id="Microsoft.Composition" version="1.0.27" targetFramework="win81" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="win81" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.2" targetFramework="win81" />
   <package id="Microsoft.NETCore.UniversalWindowsPlatform" version="6.1.5" targetFramework="win81" />
@@ -12,6 +21,7 @@
   <package id="Portable.BouncyCastle" version="1.8.2" targetFramework="win81" />
   <package id="Splat" version="3.0.0" targetFramework="win81" />
   <package id="System.Collections" version="4.3.0" targetFramework="win81" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="win81" />
   <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="win81" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="win81" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="win81" />
@@ -21,6 +31,8 @@
   <package id="System.Net.Requests" version="4.3.0" targetFramework="win81" />
   <package id="System.Reflection" version="4.3.0" targetFramework="win81" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="win81" />
+  <package id="System.Reflection.Metadata" version="1.2.0" targetFramework="win81" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="win81" />
   <package id="System.Runtime" version="4.3.0" targetFramework="win81" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="win81" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="win81" />
